k8s/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archie-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: archie-app
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
